feature engineering 1 results

--- a/project.ipynb
+++ b/project.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,35 +71,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Read data\n",
-    "# data = pd.read_csv(\"DOW30.csv\")\n",
-    "# data = data.drop(['Date', 'TEDSpread', 'EFFR'],axis=1)\n",
-    "# data.head()"
+    "# Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Exploration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Models"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split data and label\n",
-    "# data_Y = data['LABEL']\n",
-    "# data_X = data.drop(['LABEL'],axis=1)\n",
-    "# print(data_X.head())\n",
-    "# print(data_Y.head())\n",
-    "# print(data_Y.shape)\n",
-    "# print(data_X.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,8 +196,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load datasets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,6 +212,111 @@
     "data_dow = pd.read_csv(\"DOW30.csv\")\n",
     "data_sp = pd.read_csv(\"SP500.csv\")\n",
     "data_nas = pd.read_csv(\"NASDAQ.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results with Various Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1: without tracking the prev day; no date, TEDSpread, EFFR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.54 (+/- 0.00) [SVM]\n",
+      "Accuracy: 0.50 (+/- 0.03) [KNN]\n",
+      "Accuracy: 0.52 (+/- 0.04) [Neural Network]\n",
+      "Accuracy: 0.53 (+/- 0.03) [Ensemble]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DOW30\n",
+    "data_dow_processed = data_dow.drop(['Date', 'TEDSpread', 'EFFR'],axis=1)\n",
+    "# data_dow_processed.head()\n",
+    "\n",
+    "data_dow_Y = data_dow_processed['LABEL']\n",
+    "data_dow_X = data_dow_processed.drop(['LABEL'],axis=1)\n",
+    "svm_grid_search = SVM_trainer(data_dow_X, data_dow_Y)\n",
+    "knn_grid_search = KNN_trainer(data_dow_X, data_dow_Y)\n",
+    "nn_grid_search = NN_trainer(data_dow_X, data_dow_Y)\n",
+    "ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, data_dow_X, data_dow_Y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.53 (+/- 0.04) [SVM]\n",
+      "Accuracy: 0.50 (+/- 0.02) [KNN]\n",
+      "Accuracy: 0.53 (+/- 0.03) [Neural Network]\n",
+      "Accuracy: 0.51 (+/- 0.04) [Ensemble]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SP500\n",
+    "data_sp_processed = data_sp.drop(['Date', 'TEDSpread', 'EFFR'],axis=1)\n",
+    "data_sp_Y = data_sp_processed['LABEL']\n",
+    "data_sp_X = data_sp_processed.drop(['LABEL'],axis=1)\n",
+    "svm_grid_search = SVM_trainer(data_sp_X, data_sp_Y)\n",
+    "knn_grid_search = KNN_trainer(data_sp_X, data_sp_Y)\n",
+    "nn_grid_search = NN_trainer(data_sp_X, data_sp_Y)\n",
+    "ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, data_sp_X, data_sp_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.56 (+/- 0.00) [SVM]\n",
+      "Accuracy: 0.47 (+/- 0.04) [KNN]\n",
+      "Accuracy: 0.56 (+/- 0.00) [Neural Network]\n",
+      "Accuracy: 0.55 (+/- 0.00) [Ensemble]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NASDAQ\n",
+    "data_nas_processed = data_nas.drop(['Date', 'TEDSpread', 'EFFR'],axis=1)\n",
+    "data_nas_Y = data_nas_processed['LABEL']\n",
+    "data_nas_X = data_nas_processed.drop(['LABEL'],axis=1)\n",
+    "SVM_trainer(data_nas_X, data_nas_Y)\n",
+    "svm_grid_search = SVM_trainer(data_nas_X, data_nas_Y)\n",
+    "knn_grid_search = KNN_trainer(data_nas_X, data_nas_Y)\n",
+    "nn_grid_search = NN_trainer(data_nas_X, data_nas_Y)\n",
+    "ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, data_nas_X, data_nas_Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2: tracking the prev day; no date, TEDSpread, EFFR"
    ]
   },
   {
@@ -251,7 +357,7 @@
    "source": [
     "# DOW30\n",
     "data_dow_processed = process_data(data_dow, data_sp, data_nas, \"SP500\", \"NASDAQ\")\n",
-    "# print(dataset_dow_processed.head())\n",
+    "# print(data_dow_processed.head())\n",
     "data_dow_Y = data_dow_processed['LABEL']\n",
     "data_dow_X = data_dow_processed.drop(['LABEL'],axis=1)\n",
     "svm_grid_search = SVM_trainer(data_dow_X, data_dow_Y)\n",
@@ -332,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
