--- a/project.ipynb
+++ b/project.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +84,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first cache the data sets here for continuous usage, taking away overhead that would happen from loading in the data set at each step of the training."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -100,6 +107,13 @@
    "metadata": {},
    "source": [
     "# Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before performing data cleaning, we first verify whether or not it is even necessary. Some data sets come fully intact without inconsistencies, so we check if the data sets contain any null values before continuing on."
    ]
   },
   {
@@ -137,6 +151,17 @@
    "metadata": {},
    "source": [
     "# Data Exploration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data was then explored by using a box plot and a line graph. \n",
+    "\n",
+    "Using the box plot, the data set can be summarized into its minimum, 1st quartile, median, 3rd quartile, and maximum, along with any outliers that are contained in the data.\n",
+    "\n",
+    "Using the line graph, the data is visualized in a way that may help determine trends that are not as easily detected using machine learning algorithms."
    ]
   },
   {
@@ -184,6 +209,18 @@
    "metadata": {},
    "source": [
     "# Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The SVM model performs 3 things:\n",
+    "    \n",
+    "    - Scales the data so that it is normalized to reduce runtime.\n",
+    "    - Performs dimensionality reduction using PCA to reduce runtime.\n",
+    "    - Runs SVM.\n",
+    "Using these steps, we can mitigate the time spent training the SVM model without severely impacting the accuracy."
    ]
   },
   {
@@ -247,13 +284,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Neural Network model performs 3 things:\n",
+    "    \n",
+    "    - Scales the data so that it is normalized to reduce runtime and to prevent some features from outweighing others.\n",
+    "    - Tests varying hidden layers in order to best determine which would have the greatest performance.\n",
+    "    - Runs Neural Networks.\n",
+    "Using these steps, we can mitigate the time spent training the Neural Network model without severely impacting the accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Neural Network\n",
-    "# @ignore_warnings(category=ConvergenceWarning)\n",
+    "@ignore_warnings(category=ConvergenceWarning)\n",
     "def NN_trainer(data_X, data_Y):\n",
     "    nn_scaler = StandardScaler()\n",
     "    nn = MLPClassifier()\n",
@@ -273,12 +322,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ensamble\n",
-    "# @ignore_warnings(category=ConvergenceWarning)\n",
+    "@ignore_warnings(category=ConvergenceWarning)\n",
     "def ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, data_X, data_Y):\n",
     "    eclf = VotingClassifier(\n",
     "        estimators=[('svm', svm_grid_search), ('knn', knn_grid_search), ('nn', nn_grid_search)],\n",
@@ -642,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
